# modal

./: CMakeLists.txt
include/: modal.hpp
src/: main.cpp  main_test.cpp
